RESOLVED FIXED66319
Placeholder text in text fields disappears when the field is focused on Windows, which doesn't match Lion or Windows native text fields
https://bugs.webkit.org/show_bug.cgi?id=66319
Summary Placeholder text in text fields disappears when the field is focused on Windo...
Adam Roben (:aroben)
Reported 2011-08-16 11:04:12 PDT
To reproduce: 1. Go to data:text/html,%3Cinput%20placeholder=%22Can%20you%20see%20this%20text?%22%20autofocus%3E The placeholder text is not shown. But it should be shown, to match Windows-native text fields (e.g., the Windows 7 login password field) and Lion text fields.
Attachments
Make placeholder text remain visible until a character is typed on Windows (2.19 KB, patch)
2011-08-16 12:30 PDT, Adam Roben (:aroben)
hyatt: review+
Adam Roben (:aroben)
Comment 1 2011-08-16 11:06:53 PDT
This is currently causing the following tests to fail: fast/forms/input-placeholder-visibility-1.html fast/forms/input-placeholder-visibility-3.html fast/forms/textarea-placeholder-visibility-1.html fast/forms/textarea-placeholder-visibility-2.html http://build.webkit.org/results/Windows%207%20Release%20(Tests)/r93110%20(15520)/results.html
Adam Roben (:aroben)
Comment 2 2011-08-16 12:30:34 PDT
Created attachment 104077 [details] Make placeholder text remain visible until a character is typed on Windows
Dave Hyatt
Comment 3 2011-08-16 12:45:13 PDT
Comment on attachment 104077 [details] Make placeholder text remain visible until a character is typed on Windows r=me
Adam Roben (:aroben)
Comment 4 2011-08-16 12:50:40 PDT
Note You need to log in before you can comment on or make changes to this bug.