Make placeholder text remain visible until a character is typed on Windows

Fixes <http://webkit.org/b/66319> Placeholder text in text fields disappears when the field
is focused on Windows, which doesn't match Lion or Windows native text fields

Covered by existing tests (which are currently failing on the bots until this patch lands).

Reviewed by Dave Hyatt.

* rendering/RenderThemeSafari.h:
(WebCore::RenderThemeSafari::shouldShowPlaceholderWhenFocused):
* rendering/RenderThemeWin.h:
(WebCore::RenderThemeWin::shouldShowPlaceholderWhenFocused):
Added overrides to return true.

git-svn-id: svn://svn.chromium.org/blink/trunk@93146 bbb929c8-8fbe-4397-9dbb-9b2b20218538