third_party/WebKit/Source/WebCore/rendering/RenderThemeSafari.h
@@ -139,6 +139,8 @@ protected:
     virtual bool paintMediaSliderThumb(RenderObject*, const PaintInfo&, const IntRect&);
 #endif
 
+    virtual bool shouldShowPlaceholderWhenFocused() const { return true; }
+
 private:
     RenderThemeSafari();
     virtual ~RenderThemeSafari();
