third_party/WebKit/Source/WebCore/rendering/RenderThemeWin.h
@@ -145,6 +145,8 @@ public:
     virtual IntPoint volumeSliderOffsetFromMuteButton(RenderBox*, const IntSize&) const;
 #endif
 
+    virtual bool shouldShowPlaceholderWhenFocused() const { return true; }
+
 private:
     enum ControlSubPart {
         None,
